[project]
name = "broker-monitor"
version = "1.3.3"
description = "Collection of monitoring scripts to track node activity of the AKIN Broker"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.4",
    "matplotlib>=3.10.3",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "requests>=2.32.4",
    "toml>=0.10.2",
]
